<resources>
    <string name="app_name">NexleInterview</string>
    <string name="signup_title">Adventure starts here</string>
    <string name="signup_description">Make your app management easy and fun!</string>
    <string name="signup_first_name">First name</string>
    <string name="signup_last_name">Last name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_require_mark">*</string>
    <string name="signup_name_hint">jonhdoe</string>
    <string name="signup_email_hint">jonhdoe@gmail.com</string>
    <string name="signup_password_hint">⚉ ⚉ ⚉ ⚉ ⚉ ⚉ ⚉ ⚉</string>
    <string name="signup_agree_policy">i agree to</string>
    <string name="signup_policy"><![CDATA[privacy policy & terms]]></string>
    <string name="signup">Sign Up</string>
    <string name="signup_have_account">Already have an account?</string>
    <string name="signup_sign_in_instead">Sign in instead</string>
    <string name="signup_or">or</string>
    <string name="signup_require_first_name">First name is required</string>
    <string name="signup_require_last_name">Last name is required</string>
    <string name="signup_require_email">Email is required</string>
    <string name="signup_require_password">Password is required</string>
    <string name="signup_not_valid_email">Email is not valid</string>
    <string name="signup_not_valid_password">Password is not valid</string>
    <string name="signup_not_valid_first_name">First name is not valid</string>
    <string name="signup_not_valid_last_name">Last name is not valid</string>
    <string name="weak_password">Password is week</string>
    <string name="fair_password">Password is fair</string>
    <string name="good_password">Password is good</string>
    <string name="strong_password">Password is strong</string>
    <string name="login_title">Welcome to Entrance Test Interview!</string>
    <string name="login_description">Please sign-in to your account and start the adventure</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_new_user">New on our platform?</string>
    <string name="login_create_account">Create an account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="available">Available</string>
    <string name="welcome">Welcome to Demo App</string>
    <string name="copyright">COPYRIGHT © 2020</string>
</resources>
