<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_signup_banner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBanner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:includeFontPadding="false"
                android:text="@string/signup_title"
                android:textColor="@color/theme_heading_display"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_regular"
                android:includeFontPadding="false"
                android:text="@string/signup_description"
                android:textColor="@color/theme_body"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    android:text="@string/signup_first_name"
                    android:textColor="@color/theme_body"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_require_mark"
                    android:textColor="@color/text_error"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:autofillHints=""
                android:background="@drawable/bg_sign_up_edit_text"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:hint="@string/signup_name_hint"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvRequireFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:includeFontPadding="false"
                android:text="@string/signup_require_first_name"
                android:textColor="@color/text_error"
                android:textSize="12sp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    android:text="@string/signup_last_name"
                    android:textColor="@color/theme_body"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_require_mark"
                    android:textColor="@color/text_error"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:autofillHints=""
                android:background="@drawable/bg_sign_up_edit_text"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:hint="@string/signup_name_hint"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvRequireLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:includeFontPadding="false"
                android:text="@string/signup_require_last_name"
                android:textColor="@color/text_error"
                android:textSize="12sp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    android:text="@string/signup_email"
                    android:textColor="@color/theme_body"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_require_mark"
                    android:textColor="@color/text_error"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:autofillHints=""
                android:background="@drawable/bg_sign_up_edit_text"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:hint="@string/signup_email_hint"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvRequireEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:includeFontPadding="false"
                android:text="@string/signup_require_email"
                android:textColor="@color/text_error"
                android:textSize="12sp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    android:text="@string/signup_password"
                    android:textColor="@color/theme_body"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_require_mark"
                    android:textColor="@color/text_error"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:autofillHints=""
                android:background="@drawable/bg_sign_up_edit_text"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:hint="@string/signup_password_hint"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvRequirePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:includeFontPadding="false"
                android:text="@string/signup_require_password"
                android:textColor="@color/text_error"
                android:textSize="12sp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <CheckBox
                    android:id="@+id/chkPolicy"
                    android:layout_width="25dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="10dp"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    android:text="@string/signup_agree_policy"
                    android:textColor="@color/theme_body"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    android:text="@string/signup_policy"
                    android:textColor="@color/theme_primary"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    android:text="@string/signup_have_account"
                    android:textColor="@color/theme_body"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvAlreadyHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    android:text="@string/signup_sign_in_instead"
                    android:textColor="@color/theme_primary"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/theme_body"
            app:layout_constraintBottom_toBottomOf="@id/tvOr"
            app:layout_constraintTop_toTopOf="@id/tvOr" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:paddingHorizontal="10dp"
            android:text="@string/signup_or"
            android:textColor="@color/theme_body"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llSignup" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOr">

            <ImageView
                android:id="@+id/imgFacebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/imgTwitter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_email" />

            <ImageView
                android:id="@+id/imgGit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_git" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
